--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h6>he</h6>
         <h1>Md Mahtab Uddin</h1>
         <h2>Hello ! Everyone👋</h2>
-        <h3>My name is Mahtab. I am a student. I live in Bangladesh. Bangladesh is a beautiful country. I love Bangladesh. Rangamati and Sylhet are my favorite places in Bangladesh. This picture was taken by me in Sylhet. My favorite color is blue. I love gardening and coding in my spare time.</h2>
+        <h3>My name is Mahtab. I am a student. I live in Bangladesh. Bangladesh is a beautiful country. I love Bangladesh. Rangamati and Sylhet are my favorite places in Bangladesh. My favorite color is blue. I love gardening and coding in my spare time.</h2>
         <h4>My Future:</h4>
         <h5>I don't know exactly what my future holds. But the work of time will be understood. That's not what Steve James said "Your time is limited, so don't use it living someone else's life."—Steve Jobs. Maria Edgeworth says,"If we take care of the moments, the years will take care of themselves."—Maria Edgeworth</h5>
 
